docroot/themes/custom/ymca/sass/ysr_2017/_modals.scss
.theme-ymca--2017-compain {

  .modal-dialog {
    @include rem(max-width, 600px);

    .ajax-progress {
      position: absolute;
      top: 50%;
      left: 50%;
      @include translate(-50%, -50%);
    }
  }

  .modal-header {
    @include border-radius(4px 4px 0 0);
    @include rem(height, 60px);
    @include rem(padding, 0 15px);
    background: $green-dark;
    border: none;
    color: $white;

    @include breakpoint($tablet) {
      @include rem(height, 80px);
      @include rem(padding, 0 30px);
    }
  }

  .modal-title {
    @include cachet-bold();
    @include rem(line-height, 60px);
    font-size: 20px;
    text-transform: uppercase;

    @include breakpoint($tablet) {
      @include rem(line-height, 80px);
      font-size: 25px;
    }
  }

  .modal-close {
    @include border-radius(0);
    @include rem(height, 40px);
    @include rem(line-height, 40px);
    @include rem(margin, 10px);
    @include rem(width, 40px);
    background: none;
    color: $white;
    display: block;
    font-size: 18px;
    padding: 0;
    position: absolute;
    right: 0;
    top: 0;
    text-align: center;

    @include breakpoint($tablet) {
      @include rem(height, 60px);
      @include rem(line-height, 60px);
      @include rem(width, 60px);
      font-size: 20px;
    }
  }

  .modal-body {
    @include border-radius(0 0 6px 6px);
    overflow: hidden;
    padding: 0;
  }

  .compain-modal {
  }
}


.yfr-content-info {
  @include rem(padding, 100px 20px 50px);
  position: relative;
  text-align: center;
  margin: 0 auto;

  @include breakpoint($tablet) {
    max-width: 80%;
  }

  &:before {
    @include rem(width, 44px);
    @include rem(height, 44px);
    @include rem(top, 32px);
    @include border-radius(50%);
    @include translateX(-50%);
    background: #fff inline-image('../prototypes/yfr/img/tabs/icon-check.svg')  50% 50% no-repeat;
    border: 2px solid $green-medium;
    display: block;
    left: 50%;
    position: absolute;
    content: '';
    @include rem(background-size, 22px 16px);
  }

  strong {
    color: $grey7;
  }

  p {
    @include rem(margin, 0 0 14px 0);
    color: $grey5;
    line-height: 22px;
    font-size: 15px;
  }

  .btn {
    width: 140px;

    @include breakpoint($tablet){
      max-width: 140px;
    }
  }

  .row {
    + .row {
      @include rem(margin-top, 28px);
    }
  }
}


///NEW CODE///

.theme-ymca--2017-compain {
  &.modal-open {
    .viewport {
      width: 100%;
    }
  }

  .modal-dialog {
    @include rem(padding-left, 20px);
    @include rem(padding-right, 20px);
    width: 100%;
  }

  .modal-content {
    border-radius: 5px;
  }

  .compain-content-bonus {
    @include rem(padding, 98px 38px 38px);
    text-align: center;
    position: relative;

    &:before {
      @include rem(width, 38px);
      @include rem(height, 38px);
      @include rem(top, 68px);
      content: '';
      display: block;
      position: absolute;
      left: 50%;
      background-size: cover;
      transform: translate(-50%, -50%);
    }

    p {
      @include cachet-bold();
      @include rem(font-size, 18px);
      @include rem(line-height, 24px);
      color: $grey5;
    }

    b {
      color: $green-dark;
      text-transform: uppercase;
    }

    a:not(.btn) {
      color: $green-dark;
    }
  }


  .compain-register-now-form,
  .compain-login-form,
  .compain-email-form {
    @include rem(padding, 20px 20px 30px);
    transition: padding .3s;

    .col-sm-6 {
      padding: 0;
    }

    @include breakpoint($tablet) {
      @include rem(padding, 50px 88px 40px);
    }

    .form-item:not(input) {
      @include rem(padding-bottom, 20px);
      margin-bottom: 0;
    }

    .btn {
      @include rem(line-height, 26px);
      width: 100%;
    }

    label {
      @include rem(font-size, 16px);
      @include rem(line-height, 22px);
      font-weight: normal;
      color: $grey4;
    }
  }

  .compain-register-now-form,
  .compain-login-form {
    clear: both;
    overflow: hidden;

    .form-item {
      @include breakpoint($tablet) {
        float: left;
        width: 70%;
      }
    }


    .form-btn {
       @include breakpoint($tablet) {
        float: left;
        width: 31%;
        margin-left: -1%;
       }

       + .form-item {
         @include rem(padding, 20px 0 0 0);

         @include breakpoint($tablet) {
           padding-top: 0;
         }
       }
    }

    .compain-link-collapsed {
      @include breakpoint($tablet) {
        clear: both;
        overflow: hidden;
      }
    }
  }


  .compain-facility-access-hint-link {
    @include rem(padding, 22px 0 12px);
    @include rem(font-size, 16px);
    @include rem(line-height, 28px);
    color: $green-medium;
    display: block;
    text-align: center;

    &:focus,
    &:hover {
      color: $green-medium;
      text-decoration: underline;
      outline: none;
    }

    @include breakpoint($tablet){

    }
  }


  .compain-facility-access-hint-wrapper {

    @include breakpoint($mobile-max) {
      &.collapse {
        display: block;
        height: auto !important;
      }
    }
  }

  .compain-facility-access-hint {
    @include rem(background-position, 20px bottom);
    @include rem(background-size, auto 190px);
    @include rem(padding, 20px 15px 190px 25px);
    background-color: #f2f2f2;
    background-image: url(../prototypes/yfr/img/modals/hand.png);
    background-repeat: no-repeat;
    position: relative;
    transition: background-position .3s, background-size .3s, padding .35s ease, opacity .35s ease;

    @include breakpoint($tablet-portrait) {
      @include rem(background-position, center bottom);
    }

    @include breakpoint($tablet) {
      @include rem(padding, 30px 88px 200px);
      @include rem(background-size, auto 200px);
      @include rem(background-position, 88px bottom);
    }

    p {
      @include rem(line-height, 25px);
      color: $grey5;
      font-size: 18px;
    }

    p.small {
      @include rem(line-height, 18px);
      font-size: 13px;
      max-width: 75%;
    }
  }

  .compain-register-form,
  .compain-email-form {
    @include rem(padding, 20px 20px 30px);
    transition: padding .3s;


    @include breakpoint($tablet) {
      @include rem(padding, 50px 88px 40px);
    }

    .form-item {
      @include rem(margin, 0 0 20px 0);

      .form-text {
        text-align: center;
      }
    }

    .description {
      @include rem(font-size, 16px);
      @include rem(line-height, 28px);
      @include rem(margin, 0 0 40px 0);
      text-align: center;
      color: $grey5;
    }

    .form-btn-wrapper {
      @include rem(padding, 0 0 6px 0);
      clear: both;
      overflow: hidden;
      text-align: center;

      .btn {
        width: 100%;
        max-width: 100% !important;
        display: block;

        @include breakpoint($tablet){
          max-width: 156px !important;
        }

        + .btn {
          @include rem(margin, 20px 0 0 0);

          @include breakpoint($tablet) {
            margin-top: 0;
          }
        }

        &.pull-left,
        &.pull-right {

          @include breakpoint($tablet) {
            width: calc(50% - 14px);
            display: block;
            max-width: initial;
          }
        }

        &:not(.pull-left),
        &:not(.pull-right) {
          display: inline-block;
          vertical-align: top;
          float: none;
          width: 100%;
          max-width: 156px;
        }
      }

      .compain-green { }

      .compain-grey { }
    }
  }

  .compain-register-form {

  }

  .compain-email-form {
    .description {
      @include rem(margin-bottom, 20px);
    }

    .form-item {
      .form-text {
        text-align: left;
      }
    }

    .form-btn-wrapper {
      .btn {
        max-width: 100% !important;

        @include breakpoint($tablet) {
          max-width: 156px !important;
        }
      }
    }
  }
}

#bonus-modal,
#bonus-modal-no-register,
#bonus-modal-day {
  .modal-header {
    display: none;
  }

  .modal-dialog  {
    max-width: 478px;
  }

  .btn {
    @include rem(margin, 38px 0 0 0);
    width: 100%;

    @include breakpoint($tablet) {
      max-width: 118px;
      margin-left: auto;
      margin-right: auto;
    }
  }
}

#bonus-modal {
  .compain-content-bonus {
    &:before {
      background: transparent inline-image('../prototypes/ysr_2017/img/icons/icon-hint-modal.svg') 50% 50% no-repeat;
    }
  }
}

#bonus-modal-no-register {
  .compain-content-bonus {
    &:before {
      background-image: inline-image('../prototypes/ysr_2017/img/icons/icon-signedin-user.svg');
      background-repeat: no-repeat;
      border: 2px solid $green-light;
      border-radius: 50%;
      background-size: cover;
      width: 48px;
      height: 48px;
    }
  }
}

#bonus-modal-day {
  .compain-content-bonus {
    &:before {
      background: transparent inline-image('../prototypes/ysr_2017/img/icons/icon-calendar.svg') 50% 50% no-repeat;
      border: 2px solid $green-light;
      border-radius: 50%;
      background-size: cover;
      width: 48px;
      height: 48px;
    }
  }
}

